--- a/index.html
+++ b/index.html
@@ -4,14 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Liberty Radio - Open-source radio directory for independent streams.">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net; img-src 'self' data: https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net;">
+    <!-- Updated CSP to allow necessary resources -->
+    <meta http-equiv="Content-Security-Policy" content="
+        default-src 'self';
+        script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline' 'unsafe-eval';
+        img-src 'self' data: https://cdn.jsdelivr.net https://listen.noagendastream.com https://streams1.infowars.com;
+        media-src 'self' https://listen.noagendastream.com http://streams1.infowars.com;
+        style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net;
+        connect-src 'self' https://cdn.jsdelivr.net;
+    ">
     <title>Liberty Radio - Independent Radio Directory</title>
     <link rel="shortcut icon" href="assets/favicon.svg" type="image/svg+xml">
     <link rel="manifest" href="manifest.json">
+    <!-- Shoelace CSS for UI components -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/themes/dark.css" />
+    <!-- Flag icons for country badges -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.2.3/css/flag-icons.min.css" />
+    <!-- Custom styles -->
     <link rel="stylesheet" href="style.css">
+    <!-- HLS.js for playing HLS streams -->
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest/dist/hls.min.js"></script>
+    <!-- Shoelace JS for UI components -->
     <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/shoelace-autoloader.js"></script>
 </head>
 <body>
@@ -29,7 +42,7 @@
         <sl-card>
             <div class="card-container">
                 <div class="logo-container">
-                    <img class="radio-logo" src="assets/noagenda-logo.webp" alt="No Agenda Live Logo" onerror="this.src='assets/placeholder.webp'">
+                    <img class="radio-logo" src="assets/placeholder.webp" alt="No Agenda Live Logo">
                     <sl-button class="play-radio" variant="primary">
                         <sl-icon slot="prefix" name="play-circle-fill"></sl-icon>
                         Play
@@ -58,7 +71,7 @@
         <sl-card>
             <div class="card-container">
                 <div class="logo-container">
-                    <img class="radio-logo" src="assets/noagenda-music-logo.webp" alt="No Agenda Music Logo" onerror="this.src='assets/placeholder.webp'">
+                    <img class="radio-logo" src="assets/placeholder.webp" alt="No Agenda Music Logo">
                     <sl-button class="play-radio" variant="primary">
                         <sl-icon slot="prefix" name="play-circle-fill"></sl-icon>
                         Play
@@ -87,7 +100,7 @@
         <sl-card>
             <div class="card-container">
                 <div class="logo-container">
-                    <img class="radio-logo" src="assets/infowars-logo.webp" alt="Infowars Radio Logo" onerror="this.src='assets/placeholder.webp'">
+                    <img class="radio-logo" src="assets/placeholder.webp" alt="Infowars Radio Logo">
                     <sl-button class="play-radio" variant="primary">
                         <sl-icon slot="prefix" name="play-circle-fill"></sl-icon>
                         Play
@@ -147,11 +160,12 @@
         <small>This website is <a href="#" target="_blank">open-source</a>.</small>
         <p>© 2025 <a href="#" target="_blank">Liberty Express</a></p>
     </footer>
-    <script src="script.js" defer></script>
+    <!-- Load the main script -->
     <script>
         if ("serviceWorker" in navigator) {
             navigator.serviceWorker.register("sw.js");
         }
     </script>
+    <script src="script.js"></script>
 </body>
 </html>
