Update Content Security Policy in index.html
Updated Content Security Policy to allow additional media and connect sources.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Liberty Radio - Open-source radio directory for independent streams.">
+    <!-- Updated CSP to allow necessary resources -->
     <meta http-equiv="Content-Security-Policy" content="
         default-src 'self';
         script-src 'self' https://cdn.jsdelivr.net;
         img-src 'self' data: https://cdn.jsdelivr.net https://flagicons.lipis.dev;
-        media-src 'self' https: http:;
+        media-src 'self' https: http: blob:;
         style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net;
-        connect-src 'self' https://cdn.jsdelivr.net;
+        connect-src 'self' https://cdn.jsdelivr.net http://streams1.infowars.com https://listen.noagendastream.com;
     ">
     <title>Liberty Radio - Independent Radio Directory</title>
     <link rel="shortcut icon" href="assets/favicon.svg" type="image/svg+xml">
